syntax = "proto3";
package model;
option go_package = "github.com/vsjcloud/beaver/cathedral/generated/proto/model";

import "google/protobuf/timestamp.proto";

message ProjectInfo {
    string name = 1;
    string value = 2;
}

message ProjectPhoto {
    string photoID = 1;
    string description = 2;
}

message ProjectTag {
    string name = 1;
}

message Project {
    string name = 1;
    string description = 2;
    repeated ProjectInfo details = 3;
    google.protobuf.Timestamp startDate = 4;
    google.protobuf.Timestamp finishDate = 5;
    ProjectPhoto featurePhoto = 6;
    repeated ProjectPhoto albumPhotos = 7;
    map<string, bool> tagIDs = 8;
}

message ArchivedProjectDirectory {
    map<string, bool> projectIDs = 1;
}

message ArchivedProjectTagDirectory {
    map<string, bool> projectTagIDs = 1;
}
